# LinuxDisplayInfo

./: CMakeLists.txt  LICENSE  detect_backend.cpp  detect_backend.h  main.cpp  monitor_common.cpp  monitor_common.h  wayland_monitor.cpp  wayland_monitor.h  x11_monitor.cpp  x11_monitor.h
